fix(#3): fix select z-index

--- a/src/ui-kit/form/form.module.css
+++ b/src/ui-kit/form/form.module.css
@@ -98,6 +98,10 @@
   opacity: 60%;
 }
 
+.label_wrapper:has(ul) {
+  z-index: 11;
+}
+
 .label_wrapper {
   display: flex;
   flex-direction: column;
